# optimum-cli-pro

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  LICENSE  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
configs/: backends.yaml  default.yaml  models.yaml
deployment/aws/: README.md  cloudformation.yaml
deployment/docker/: nginx.conf
deployment/scripts/: deploy.ps1  deploy.sh
docs/: quickstart.md
src/optimum_cli/: __init__.py  __main__.py
src/optimum_cli/api/: __init__.py  main.py  schemas.py
src/optimum_cli/api/routes/: __init__.py  health.py  models.py  optimize.py  registry.py  tracking.py
src/optimum_cli/api/static/: app.js  index.html  style.css
src/optimum_cli/backends/: __init__.py  base.py  bettertransformer.py  onnx.py  openvino.py
src/optimum_cli/cli/: __init__.py  benchmark.py  main.py  optimize.py  registry.py  serve.py  tracking.py
src/optimum_cli/core/: __init__.py  backend_manager.py  benchmarking.py  config.py  model_loader.py  optimizer.py  registry.py
src/optimum_cli/utils/: __init__.py  exceptions.py  hardware.py  logger.py  tracking.py  validators.py
tests/: __init__.py  conftest.py
tests/unit/: test_backends.py  test_benchmarking.py  test_hardware.py
